# news-parser

./: .gitignore  CODE_OF_CONDUCT_RUS.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: settings.yaml
core/: __init__.py  base_parser.py  config.py  lenta_parser.py  ria_parser.py
src/: main.py
