[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "news_parser"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "feedparser>=6.0.11",
    "idna>=3.10",
    "pytz>=2025.2",
    "PyYAML>=6.0.2",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "sgmllib3k>=1.0.0",
    "soupsieve>=2.7",
    "typing_extensions>=4.13.2",
    "urllib3>=2.4.0"
]